tests/spectest/local_init.bin.wast
(module definition binary
  "\00\61\73\6d\01\00\00\00\01\88\80\80\80\00\01\60"
  "\01\64\6f\01\64\6f\03\84\80\80\80\00\03\00\00\00"
  "\07\ba\80\80\80\00\03\0d\67\65\74\2d\61\66\74\65"
  "\72\2d\73\65\74\00\00\0d\67\65\74\2d\61\66\74\65"
  "\72\2d\74\65\65\00\01\16\67\65\74\2d\69\6e\2d\62"
  "\6c\6f\63\6b\2d\61\66\74\65\72\2d\73\65\74\00\02"
  "\0a\b6\80\80\80\00\03\8b\80\80\80\00\01\01\64\6f"
  "\20\00\21\01\20\01\0b\8c\80\80\80\00\01\01\64\6f"
  "\20\00\22\01\1a\20\01\0b\8f\80\80\80\00\01\01\64"
  "\6f\20\00\21\01\02\64\6f\20\01\0b\0b"
)
(module instance)
(assert_return (invoke "get-after-set" (ref.extern 1)) (ref.extern 1))
(assert_return (invoke "get-after-tee" (ref.extern 2)) (ref.extern 2))
(assert_return (invoke "get-in-block-after-set" (ref.extern 3)) (ref.extern 3))
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
    "\00\00\03\82\80\80\80\00\01\00\0a\8e\80\80\80\00"
    "\01\88\80\80\80\00\01\01\64\6f\20\00\1a\0b"
  )
  "uninitialized local"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\86\80\80\80\00\01\60"
    "\01\64\6f\00\03\82\80\80\80\00\01\00\0a\9a\80\80"
    "\80\00\01\94\80\80\80\00\01\01\64\6f\02\40\20\00"
    "\21\01\20\00\22\01\1a\0b\20\01\1a\0b"
  )
  "uninitialized local"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\86\80\80\80\00\01\60"
    "\01\64\6f\00\03\82\80\80\80\00\01\00\0a\97\80\80"
    "\80\00\01\91\80\80\80\00\01\01\64\6f\41\00\04\40"
    "\20\00\21\01\05\20\01\0b\0b"
  )
  "uninitialized local"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\86\80\80\80\00\01\60"
    "\01\64\6f\00\03\82\80\80\80\00\01\00\0a\9c\80\80"
    "\80\00\01\96\80\80\80\00\01\01\64\6f\41\00\04\40"
    "\20\00\21\01\05\20\00\21\01\0b\20\01\1a\0b"
  )
  "uninitialized local"
)
(module definition binary
  "\00\61\73\6d\01\00\00\00\01\88\80\80\80\00\01\60"
  "\01\64\6f\01\64\6f\03\82\80\80\80\00\01\00\07\8c"
  "\80\80\80\00\01\08\74\65\65\2d\69\6e\69\74\00\00"
  "\0a\92\80\80\80\00\01\8c\80\80\80\00\01\01\64\6f"
  "\20\00\22\01\1a\20\01\0b"
)
(module instance)
(assert_return (invoke "tee-init" (ref.extern 1)) (ref.extern 1))
